A mini restaurant website

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
       <div class="container">
         <div class="header">
-          <img src="./images/logo.png" alt="foodie logo" />
+          <img src="./images/logo.png" alt="foodie logo" class="logo"/>
           <nav>
             <ul>
               <li><a href="" class="current">Home</a></li>
@@ -52,6 +52,60 @@
               vitae ipsum animi blanditiis.
             </p>
             <a href="#" class="btn">Reserve a table</a>
+          </div>
+        </div>
+      </section>
+      <!-- ABOUT SECTION -->
+      <section class="about-section">
+        <div class="container">
+          <div class="about">
+            <img src="./images/2-burger.jpg" alt="burger"  class="burger"/>
+            <p>Our brief history</p>
+            <h2 class="abt-pheader">Making delicacies since 2010!!!</h2>
+            <p>
+              our succes lies in out story when we have been Lorem ipsum dolor
+              sit, amet consectetur adipisicing elit. Similique deleniti
+              sapiente veniam atque deserunt quidem eligendi maxime reiciendis
+              excepturi voluptas. Lorem ipsum, dolor sit amet consectetur
+              adipisicing elit. Quia mollitia fuga eum nisi non sint nemo nihil
+              reprehenderit debitis temporibus optio minus, cupiditate ad magni
+              delectus recusandae aspernatur saepe eos.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- MENU SECTION -->
+      <section class="menu-section">
+        <div class="container">
+          <div class="menu-heading">
+            <p>Bon appetite</p>
+            <h2 class="abt-pheader">See our Menu</h2>
+          </div>
+          <div class="menu-items">
+            <div class="menu-item">
+              <img src="./images/3-jollof.jpeg" alt="jollofspecial" class="jpeg" />
+              <h3 class="jollofspecial">jollof special</h3>
+              <p>
+                Tasty jollof rice prepared with peppered onions Lorem ipsum
+                dolor sit, amet consectetur adipisicing elit. Nemo, recusandae?
+              </p>
+            </div>
+            <div class="menu-item">
+              <img src="./images/4-salmon.jpg" alt="jollofspecial" class="jpeg" />
+              <h3 class="jollofspecial">Salmon quisine</h3>
+              <p>
+                Tasty jollof rice prepared with peppered onions Lorem ipsum
+                dolor sit, amet consectetur adipisicing elit. Nemo, recusandae?
+              </p>
+            </div>
+            <div class="menu-item">
+              <img src="./images/5- pizza.jpg" alt="jollofspecial" class="jpeg" />
+              <h3 class="jollofspecial">pizza fantastico</h3>
+              <p>
+                Tasty jollof rice prepared with peppered onions Lorem ipsum
+                dolor sit, amet consectetur adipisicing elit. Nemo, recusandae?
+              </p>
+            </div>
           </div>
         </div>
       </section>
