--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
       <div class="container">
         <div class="header">
-          <img src="./images/logo.png" alt="foodie logo" class="logo"/>
+          <img src="./images/logo.png" alt="foodie logo" class="logo" />
           <nav>
             <ul>
               <li><a href="" class="current">Home</a></li>
@@ -59,7 +59,7 @@
       <section class="about-section">
         <div class="container">
           <div class="about">
-            <img src="./images/2-burger.jpg" alt="burger"  class="burger"/>
+            <img src="./images/2-burger.jpg" alt="burger" class="burger" />
             <p>Our brief history</p>
             <h2 class="abt-pheader">Making delicacies since 2010!!!</h2>
             <p>
@@ -83,7 +83,11 @@
           </div>
           <div class="menu-items">
             <div class="menu-item">
-              <img src="./images/3-jollof.jpeg" alt="jollofspecial" class="jpeg" />
+              <img
+                src="./images/3-jollof.jpeg"
+                alt="jollofspecial"
+                class="jpeg"
+              />
               <h3 class="jollofspecial">jollof special</h3>
               <p>
                 Tasty jollof rice prepared with peppered onions Lorem ipsum
@@ -91,7 +95,11 @@
               </p>
             </div>
             <div class="menu-item">
-              <img src="./images/4-salmon.jpg" alt="jollofspecial" class="jpeg" />
+              <img
+                src="./images/4-salmon.jpg"
+                alt="jollofspecial"
+                class="jpeg"
+              />
               <h3 class="jollofspecial">Salmon quisine</h3>
               <p>
                 Tasty jollof rice prepared with peppered onions Lorem ipsum
@@ -99,7 +107,11 @@
               </p>
             </div>
             <div class="menu-item">
-              <img src="./images/5- pizza.jpg" alt="jollofspecial" class="jpeg" />
+              <img
+                src="./images/5- pizza.jpg"
+                alt="jollofspecial"
+                class="jpeg"
+              />
               <h3 class="jollofspecial">pizza fantastico</h3>
               <p>
                 Tasty jollof rice prepared with peppered onions Lorem ipsum
@@ -108,8 +120,95 @@
             </div>
           </div>
         </div>
+        <!-- TESTIMONIAL SECTION -->
+      </section>
+      <section class="testimonial-section">
+        <div class="container">
+          <div class="testimonial">
+            <p>Testimonial</p>
+            <h2 class="s-head">Customer Review</h2>
+            <img src="./images/zino.jpg" alt="Zino" />
+            <h4 class="q-head">Akparewa Ewomazino</h4>
+            <p>
+              I love the quality of service rendered at the Foody Lorem ipsum
+              dolor sit, amet consectetur adipisicing elit. Natus, laboriosam!
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="order-section">
+        <div class="container">
+          <div class="menu-heading">
+            <p>Hungry?</p>
+            <h2 class="s-head">Make An Order</h2>
+          </div>
+          <div class="order">
+            <div class="order-box">
+              <div class="order-item">
+                <img src="./images/7-order.jpg" alt="burger" />
+                <div class="order-text">
+                  <h4 class="q-head">King Burger</h4>
+                  <p>
+                    This is a king size burger Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Fuga, exercitationem!
+                  </p>
+                </div>
+              </div>
+              <div class="order-price">
+                <p>$10.99</p>
+                <a href="#" class="btn btn-solid">Buy now</a>
+              </div>
+            </div>
+            <div class="order-box">
+              <div class="order-item">
+                <img src="./images/8-order.png" alt="Rice" />
+                <div class="order-text">
+                  <h4 class="q-head">Rice Ferizo</h4>
+                  <p>
+                    This is a king size burger Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Fuga, exercitationem!
+                  </p>
+                </div>
+              </div>
+              <div class="order-price">
+                <p>$10.99</p>
+                <a href="#" class="btn btn-solid">Buy now</a>
+              </div>
+            </div>
+
+            <div class="order-box">
+              <div class="order-item">
+                <img src="./images/9-order.png " alt="burger" />
+                <div class="order-text">
+                  <h4 class="q-head">Pounded Yam</h4>
+                  <p>
+                    This is a king size burger Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Fuga, exercitationem!
+                  </p>
+                </div>
+              </div>
+              <div class="order-price">
+                <p>$10.99</p>
+                <a href="#" class="btn btn-solid">Buy now</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <div class="footer">
+        <nav class="ul-links">
+            <ul>
+              <li><a href="" class="current">Home</a></li>
+              <li><a href="">Menu</a></li>
+              <li><a href="">Order</a></li>
+            </ul>
+          </nav> 
+          <p>&copy; 2021 All Right reserved</p>       
+          </div>
+      </div>
+    </footer>
   </body>
 </html>
