--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <nav>
             <ul>
               <li><a href="" class="current">Home</a></li>
-              <li><a href="">Menu</a></li>
-              <li><a href="">Order</a></li>
+              <li><a href="#menu">Menu</a></li>
+              <li><a href="#Order">Order</a></li>
             </ul>
           </nav>
         </div>
@@ -36,7 +36,7 @@
     <!-- MAIN SECTION -->
     <main>
       <!-- INTRO SECTION -->
-      <section class="intro-section">
+      <section class="intro-section" id="blog">
         <div class="container">
           <div class="intro">
             <p class="intro-text"><span> FOR YOUR DELICACIES</span></p>
@@ -56,7 +56,7 @@
         </div>
       </section>
       <!-- ABOUT SECTION -->
-      <section class="about-section">
+      <section class="about-section" id="about">
         <div class="container">
           <div class="about">
             <img src="./images/2-burger.jpg" alt="burger" class="burger" />
@@ -75,7 +75,7 @@
         </div>
       </section>
       <!-- MENU SECTION -->
-      <section class="menu-section">
+      <section class="menu-section" id="menu">
         <div class="container">
           <div class="menu-heading">
             <p>Bon appetite</p>
@@ -122,7 +122,7 @@
         </div>
         <!-- TESTIMONIAL SECTION -->
       </section>
-      <section class="testimonial-section">
+      <section class="testimonial-section" id="testimonial">
         <div class="container">
           <div class="testimonial">
             <p>Testimonial</p>
@@ -136,7 +136,7 @@
           </div>
         </div>
       </section>
-      <section class="order-section">
+      <section class="order-section" id="Order">
         <div class="container">
           <div class="menu-heading">
             <p>Hungry?</p>
@@ -201,9 +201,9 @@
         <div class="footer">
         <nav class="ul-links">
             <ul>
-              <li><a href="" class="current">Home</a></li>
-              <li><a href="">Menu</a></li>
-              <li><a href="">Order</a></li>
+              <li><a href="#Home" class="current">Terms and Conditions</a></li>
+              <li><a href="testimonial">Blog</a></li>
+              <li><a href="#about">Our history</a></li>
             </ul>
           </nav> 
           <p>&copy; 2021 All Right reserved</p>       
